--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,11 +93,11 @@ dependencies {
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
 
-    testImplementation 'org.json:json:20180130'
-    testImplementation 'com.google.code.gson:gson:2.8.9'
     testImplementation "androidx.test:core:1.5.0"
     testImplementation "androidx.test:core-ktx:1.5.0"
 
     testImplementation "io.mockk:mockk:1.12.0"
     testImplementation "io.mockk:mockk-agent-jvm:1.12.0"
+    //MockWebserver
+    testImplementation('com.squareup.okhttp3:mockwebserver:4.10.0')
 }
